[gd_scene load_steps=32 format=3 uid="uid://dnsm78dkc4fva"]

[ext_resource type="Script" path="res://character_body_3d_2.gd" id="1_52jwf"]
[ext_resource type="PackedScene" uid="uid://clmqop7ljb4dw" path="res://body.blend" id="2_oecag"]
[ext_resource type="Script" path="res://body_part.gd" id="3_nkvxh"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jxh4v"]
height = 0.5
radius = 0.2

[sub_resource type="CylinderMesh" id="CylinderMesh_i4ybv"]
top_radius = 0.2
bottom_radius = 0.2
height = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0ovha"]
radius = 0.1
height = 0.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kwxwv"]
radius = 0.1
height = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_33mva"]
radius = 0.1
height = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_q61sf"]
radius = 0.1
height = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ei4lo"]
radius = 0.1
height = 0.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5kqtm"]
radius = 0.1
height = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qbi6b"]
radius = 0.1
height = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6mw3m"]
radius = 0.1
height = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3qjqm"]
radius = 0.1
height = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rc5oq"]
radius = 0.1
height = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_obrkq"]
radius = 0.1
height = 0.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_lw5qx"]
radius = 0.1
height = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vkjuc"]
radius = 0.1
height = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3i8m0"]
radius = 0.1
height = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wpokr"]
radius = 0.1
height = 0.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jdrny"]
radius = 0.1
height = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kloqq"]
margin = 1.0
radius = 0.1
height = 0.3

[sub_resource type="CapsuleMesh" id="CapsuleMesh_e18gs"]
radius = 0.1
height = 0.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jgp0m"]
radius = 0.1
height = 0.3

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rmem0"]
radius = 0.1
height = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_upb5a"]
radius = 0.2

[sub_resource type="SphereMesh" id="SphereMesh_tlifb"]
radius = 0.2
height = 0.4

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2xx1u"]
direction = Vector3(0, 0, 1)
initial_velocity_min = 1.0
initial_velocity_max = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l6bmf"]
albedo_color = Color(0.541176, 0.0117647, 0.0117647, 1)

[sub_resource type="SphereMesh" id="SphereMesh_25q4d"]
material = SubResource("StandardMaterial3D_l6bmf")
radius = 0.02
height = 0.1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lv6q4"]
radius = 0.3

[node name="CharacterBody3D2" type="CharacterBody3D"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
collision_layer = 2
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.846485
platform_on_leave = 2
safe_margin = 2.481
script = ExtResource("1_52jwf")
health = 100

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="face_dir" type="Node3D" parent="."]

[node name="body" parent="face_dir" instance=ExtResource("2_oecag")]

[node name="root" parent="face_dir/body" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.826865, -0.562401, 0, 0.562401, 0.826865, 0, 0, 0)

[node name="Skeleton3D" parent="face_dir/body/root" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.763086, 0.646297, 0, -0.646297, 0.763086, 0, 0, 0)
bones/0/position = Vector3(-0.0289994, 0.88645, 0.125859)
bones/0/rotation = Quaternion(0.0287016, 0.0572028, -0.0145715, 0.997844)
bones/1/position = Vector3(0.101935, -0.0260148, 0.00481071)
bones/1/rotation = Quaternion(0.721954, -0.0483824, 0.688375, -0.0508211)
bones/1/scale = Vector3(0.999997, 1.17672, 0.999995)
bones/2/rotation = Quaternion(-0.000314692, 0.000300161, 0.00231557, 0.999997)
bones/2/scale = Vector3(1, 1.00001, 1)
bones/3/rotation = Quaternion(0.331098, 0.36863, -0.215069, 0.841565)
bones/3/scale = Vector3(0.998617, 0.930362, 0.956819)
bones/4/position = Vector3(0.0122681, 0.126054, -0.013427)
bones/4/rotation = Quaternion(0.197513, 0.87695, 0.423269, -0.113099)
bones/4/scale = Vector3(0.996761, 0.929139, 1.07011)
bones/5/position = Vector3(-0.1019, -0.0260434, 0.00487673)
bones/5/rotation = Quaternion(-0.843453, 0.0279895, 0.534756, 0.0428915)
bones/5/scale = Vector3(0.999996, 1.05934, 1)
bones/6/rotation = Quaternion(-8.89517e-05, -0.000112413, -0.00250966, 0.999997)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(0.125363, -0.675103, 0.00533283, 0.726974)
bones/7/scale = Vector3(0.996089, 0.955633, 1.00032)
bones/8/position = Vector3(-0.00585266, 0.127134, 0.00333475)
bones/8/rotation = Quaternion(-0.0624957, 0.93894, 0.338348, 0.00248166)
bones/8/scale = Vector3(0.998243, 0.990155, 1.01129)
bones/9/rotation = Quaternion(0.116865, -0.139785, 0.0456892, 0.982199)
bones/9/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(-0.00304859, 0.0412766, -0.0163252, 0.99901)
bones/11/rotation = Quaternion(0.312236, 0.00636909, 0.00208919, 0.949981)
bones/12/rotation = Quaternion(-0.701136, -0.0677155, -0.0286401, 0.709227)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(-0.295192, 0.728411, -0.433153, -0.4412)
bones/14/rotation = Quaternion(0.605956, 0.516995, -0.135743, -0.589158)
bones/15/rotation = Quaternion(0.0272053, 0.00972277, 0.0160636, 0.999454)
bones/15/scale = Vector3(1, 0.999979, 0.999999)
bones/16/rotation = Quaternion(0.10824, 0.282984, 0.0137395, 0.952898)
bones/16/scale = Vector3(0.999999, 1.00002, 0.999999)
bones/17/position = Vector3(-0.0491322, 0.0501188, -0.00467725)
bones/17/rotation = Quaternion(0.0907611, -0.747185, 0.41688, 0.509597)
bones/17/scale = Vector3(1, 0.999999, 0.999999)
bones/18/position = Vector3(-1.00421e-06, 0.0210913, 2.99689e-07)
bones/18/rotation = Quaternion(-0.156358, -0.310599, 0.10403, 0.931804)
bones/18/scale = Vector3(0.999999, 0.999998, 1)
bones/19/rotation = Quaternion(-0.1465, 0.433002, 0.0313895, 0.888854)
bones/19/scale = Vector3(1, 1, 1)
bones/20/position = Vector3(0.0245923, 0.0860771, -0.00152486)
bones/20/rotation = Quaternion(-0.0974502, 0.118568, -0.0559631, 0.986566)
bones/20/scale = Vector3(1, 0.999999, 1)
bones/21/rotation = Quaternion(-0.153484, -0.00391614, 0.0232408, 0.98787)
bones/21/scale = Vector3(0.999999, 0.999999, 1)
bones/22/rotation = Quaternion(-0.15544, -0.000565211, 0.000851864, 0.987845)
bones/22/scale = Vector3(1, 0.999999, 1)
bones/23/position = Vector3(-0.00257227, 0.0869001, 0.000329393)
bones/23/rotation = Quaternion(-0.0247207, 0.0566867, -0.0157911, 0.997961)
bones/23/scale = Vector3(1, 1, 1)
bones/24/rotation = Quaternion(-0.0816594, 0.00372815, -0.00609584, 0.996635)
bones/24/scale = Vector3(0.999999, 0.999999, 1)
bones/25/rotation = Quaternion(-0.0741291, -0.0041616, -0.0047816, 0.997229)
bones/26/position = Vector3(-0.0322121, 0.0834547, -0.00193991)
bones/26/rotation = Quaternion(0.0690863, -0.0615669, 0.18637, 0.978112)
bones/26/scale = Vector3(0.999999, 1, 0.999998)
bones/27/rotation = Quaternion(-0.0527077, 0.00344314, -0.0118586, 0.998534)
bones/28/rotation = Quaternion(-0.0724428, -0.000910643, 0.0190271, 0.997191)
bones/28/scale = Vector3(0.999999, 0.999999, 0.999999)
bones/29/rotation = Quaternion(0.379125, 0.670055, -0.532224, 0.352176)
bones/30/rotation = Quaternion(-0.627543, 0.513442, -0.419966, 0.407671)
bones/31/rotation = Quaternion(0.0272052, -0.00972656, -0.0163046, 0.99945)
bones/31/scale = Vector3(1, 0.999996, 1)
bones/32/rotation = Quaternion(0.148277, -0.361895, 0.0270185, 0.919954)
bones/32/scale = Vector3(1, 1, 0.999999)
bones/33/rotation = Quaternion(0.0910039, 0.747271, -0.416773, 0.509514)
bones/33/scale = Vector3(1, 0.999999, 0.999999)
bones/34/rotation = Quaternion(-0.156301, 0.310745, -0.10381, 0.931789)
bones/35/rotation = Quaternion(-0.14659, -0.432832, -0.0311793, 0.88893)
bones/35/scale = Vector3(1, 0.999999, 1)
bones/36/position = Vector3(-0.0246045, 0.0860427, -0.00150674)
bones/36/rotation = Quaternion(-0.0679861, -0.129273, 0.112578, 0.982849)
bones/36/scale = Vector3(1, 0.999999, 1)
bones/37/rotation = Quaternion(-0.153481, 0.00407563, -0.0230117, 0.987875)
bones/38/rotation = Quaternion(-0.155435, 0.000730093, -0.000619814, 0.987846)
bones/39/position = Vector3(0.00256067, 0.0868695, 0.000347649)
bones/39/rotation = Quaternion(-0.0240679, -0.0606294, 0.0189941, 0.997689)
bones/39/scale = Vector3(1, 1, 1)
bones/40/rotation = Quaternion(-0.0816654, -0.003547, 0.00631067, 0.996634)
bones/41/rotation = Quaternion(-0.0741208, 0.00435378, 0.00499902, 0.997227)
bones/42/position = Vector3(0.0322051, 0.0834294, -0.00192042)
bones/42/rotation = Quaternion(0.0533926, 0.0138639, -0.0982306, 0.993634)
bones/42/scale = Vector3(1, 1, 0.999999)
bones/43/rotation = Quaternion(-0.0527127, -0.00326383, 0.0120747, 0.998531)
bones/44/rotation = Quaternion(-0.0724313, 0.0011044, -0.0188139, 0.997195)

[node name="body_001" parent="face_dir/body/root/Skeleton3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.999992, 0.00397933, 0, -0.00397933, 0.999992, 0, 0, 0)
layers = 4

[node name="spine" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="1"]
transform = Transform3D(0.996052, -0.0325442, -0.0825975, 0.00784503, 0.959012, -0.283256, 0.0884304, 0.28149, 0.955481, -0.0372577, 1.18372, 0.184935)
visible = false
bone_name = "spine_02"
bone_idx = 10

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/spine" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/spine/Area3D"]
transform = Transform3D(0.997875, -0.0649661, -0.00490454, 0.0623661, 0.974284, -0.21652, 0.0188448, 0.215754, 0.976266, 0.000873122, -0.0396738, -0.00903067)
shape = SubResource("CylinderShape3D_jxh4v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/spine/Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("CylinderMesh_i4ybv")

[node name="upper_right" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="2"]
transform = Transform3D(-0.934407, -0.117522, -0.336261, -0.321291, 0.68567, 0.653169, 0.153802, 0.718363, -0.678453, 0.121672, 1.38734, 0.222216)
visible = false
bone_name = "upperarm.l"
bone_idx = 30

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/upper_right" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/upper_right/Area3D"]
transform = Transform3D(1, -1.53668e-08, 1.49012e-08, 6.14673e-08, 1, -1.49012e-08, 0, 0, 1, 0.0111535, 0.13469, -0.0199734)
shape = SubResource("CapsuleShape3D_0ovha")

[node name="MeshInstance3D" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/upper_right/Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_kwxwv")

[node name="lower_right" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="3"]
transform = Transform3D(-0.936081, -0.165637, -0.31035, -0.331649, 0.709713, 0.62154, 0.11731, 0.684737, -0.719285, 0.0908836, 1.56697, 0.410414)
visible = false
bone_name = "lowerarm.l"
bone_idx = 31

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/lower_right" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/lower_right/Area3D"]
transform = Transform3D(0.737326, 0.0593897, -0.672921, -0.171519, 0.979943, -0.101449, 0.6534, 0.190221, 0.732724, 0.00237764, 0.134811, 0.0196564)
shape = SubResource("CapsuleShape3D_33mva")

[node name="MeshInstance3D" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/lower_right/Area3D/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 2.98023e-08, 1, 7.45058e-09, 0, -1.11759e-08, 1, 0.0388297, 0.0627681, 0.0150131)
visible = false
mesh = SubResource("CapsuleMesh_q61sf")

[node name="upper_left" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="4"]
transform = Transform3D(-0.991083, -0.130226, 0.0282018, -0.0647539, 0.65571, 0.752232, -0.116452, 0.743698, -0.658295, -0.196084, 1.4215, 0.215599)
visible = false
bone_name = "upperarm.r"
bone_idx = 14

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/upper_left" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/upper_left/Area3D"]
transform = Transform3D(1, 2.32831e-08, 0, 9.77889e-09, 1, 0, 7.45058e-09, -7.45058e-09, 1, 0.00863135, 0.145219, 0.0225029)
shape = SubResource("CapsuleShape3D_ei4lo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/upper_left/Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_5kqtm")

[node name="lower_left" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="5"]
transform = Transform3D(-0.995158, -0.0971225, 0.015068, -0.0572687, 0.697573, 0.714207, -0.0798784, 0.709871, -0.699772, -0.230201, 1.59329, 0.410435)
visible = false
bone_name = "lowerarm.r"
bone_idx = 15

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/lower_left" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/lower_left/Area3D"]
transform = Transform3D(1, -3.72529e-08, -4.47035e-08, -5.21541e-08, 1, 0, -2.98023e-08, 0, 1, 0.00264313, 0.153611, 0.000866771)
shape = SubResource("CapsuleShape3D_qbi6b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/lower_left/Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_6mw3m")

[node name="left_thigh" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="6"]
transform = Transform3D(0.320989, -0.137122, -0.938199, 0.0409738, -1.04641, 0.150303, -0.946192, -0.0918313, -0.311769, -0.130479, 0.862802, 0.140966)
visible = false
bone_name = "thigh.r"
bone_idx = 5

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/left_thigh" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/left_thigh/Area3D"]
transform = Transform3D(1, 2.98023e-08, 1.19209e-07, 1.11759e-08, 1, 3.72529e-09, -5.96046e-08, -3.72529e-09, 1, -0.000658154, 0.201049, -0.00782016)
shape = SubResource("CapsuleShape3D_3qjqm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/left_thigh/Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_rc5oq")

[node name="left_leg" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="7"]
transform = Transform3D(0.321462, -0.135343, -0.938295, 0.0462593, -1.04622, 0.150107, -0.945789, -0.0965242, -0.311573, -0.183869, 0.455378, 0.10521)
visible = false
bone_name = "calf.r"
bone_idx = 6

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/left_leg" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/left_leg/Area3D"]
transform = Transform3D(1, 2.6077e-08, 8.9407e-08, 5.58794e-09, 1, 7.45058e-09, -5.96046e-08, 1.11759e-08, 1, 0.00746839, 0.23925, -0.00251772)
shape = SubResource("CapsuleShape3D_obrkq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/left_leg/Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_lw5qx")

[node name="right_thigh" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="8"]
transform = Transform3D(0.154821, -0.0562491, 0.98678, -0.199065, -1.15301, -0.0162333, 0.967676, -0.228191, -0.161217, 0.0719281, 0.857576, 0.117462)
visible = false
bone_name = "thigh.l"
bone_idx = 1

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/right_thigh" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/right_thigh/Area3D"]
transform = Transform3D(1, 0, 0, 3.72529e-09, 1, 1.02445e-08, -2.98023e-08, 0, 1, 0.0189605, 0.209792, -0.0119822)
shape = SubResource("CapsuleShape3D_vkjuc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/right_thigh/Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_3i8m0")

[node name="right_leg" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="9"]
transform = Transform3D(0.153965, -0.0575856, 0.986837, -0.204393, -1.15207, -0.0170798, 0.966707, -0.232571, -0.160782, 0.0500273, 0.408646, 0.0286142)
visible = false
bone_name = "calf.l"
bone_idx = 2

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/right_leg" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/right_leg/Area3D"]
transform = Transform3D(1, 7.45058e-09, -2.98023e-08, 0, 1, 1.30385e-08, -1.49012e-07, -2.6077e-08, 1, 0.00405265, 0.231768, -0.00667393)
shape = SubResource("CapsuleShape3D_wpokr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/right_leg/Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_jdrny")

[node name="right_feet" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="10"]
transform = Transform3D(-0.647266, 0.416016, 0.590449, 0.018879, -0.859275, 0.687285, 0.763564, 0.336554, 0.523159, 0.025384, -0.0843732, -0.0709125)
visible = false
bone_name = "foot.l"
bone_idx = 3

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/right_feet" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/right_feet/Area3D"]
transform = Transform3D(-0.931041, -0.158755, -0.328571, 0.336787, -0.720473, -0.606211, -0.140487, -0.675066, 0.724256, 0.043851, 0.126908, 0.0409006)
shape = SubResource("CapsuleShape3D_kloqq")

[node name="CollisionShape3D2" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/right_feet/Area3D/CollisionShape3D"]
transform = Transform3D(1, 0, -3.72529e-08, 0, 1, -2.98023e-08, 3.72529e-09, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_e18gs")

[node name="left_feet" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="11"]
transform = Transform3D(-0.868561, -0.336626, -0.343091, 0.319354, -0.951029, 0.161497, -0.372813, 0.0185308, 0.927902, -0.241788, 0.00765818, 0.0639037)
visible = false
bone_name = "foot.r"
bone_idx = 7

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/left_feet" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/left_feet/Area3D"]
transform = Transform3D(0.899189, -0.0023534, -0.437554, -0.225299, 0.854749, -0.467594, 0.375099, 0.519037, 0.76805, -0.0255618, 0.11989, 0.0349756)
shape = SubResource("CapsuleShape3D_jgp0m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/left_feet/Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_rmem0")

[node name="head" type="BoneAttachment3D" parent="face_dir/body/root/Skeleton3D" index="12"]
transform = Transform3D(0.977128, 0.167488, -0.131031, -0.0573959, 0.801021, 0.595879, 0.204762, -0.574729, 0.792313, -0.051504, 1.46977, 0.320033)
visible = false
bone_name = "head"
bone_idx = 12

[node name="Area3D" type="Area3D" parent="face_dir/body/root/Skeleton3D/head" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")
damage = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="face_dir/body/root/Skeleton3D/head/Area3D"]
transform = Transform3D(1, -1.10776e-09, -5.82077e-11, 1.83172e-09, 1, -1.49012e-08, 0, 0, 1, -0.00323766, 0.0581298, -0.00767797)
shape = SubResource("SphereShape3D_upb5a")

[node name="MeshInstance3D" type="MeshInstance3D" parent="face_dir/body/root/Skeleton3D/head/Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("SphereMesh_tlifb")

[node name="Light" parent="face_dir/body" index="1"]
visible = false

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2351, 1.24799, -0.778004)
emitting = false
lifetime = 1.03
one_shot = true
explosiveness = 1.0
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_2xx1u")
draw_pass_1 = SubResource("SphereMesh_25q4d")

[node name="Area3D" type="Area3D" parent="." groups=["enemy"]]
transform = Transform3D(1, 0, 0, 0, 0.994447, 0.10524, 0, -0.10524, 0.994447, -0.0137982, 0.801412, 0.0820049)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_nkvxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_lv6q4")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/spine/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/upper_right/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/lower_right/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/upper_left/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/lower_left/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/left_thigh/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/left_leg/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/right_thigh/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/right_leg/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/right_feet/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/left_feet/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="face_dir/body/root/Skeleton3D/head/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="Area3D" to="." method="_on_area_3d_body_part_hit"]

[editable path="face_dir/body"]
